# triton_pcg_to_vst

./: .gitignore  CMakeLists.txt  LICENSE  PCGToVST.vcxproj  PCGToVST.vcxproj.filters  README.md  alchemist.cpp  alchemist.h  helpers.cpp  helpers.h  main.cpp  pcg_converter.cpp  pcg_converter.h  pcg_converter_arpeggiator.cpp  pcg_converter_combis.cpp  pcg_converter_effects.cpp  pcg_converter_programs.cpp  pcg_converter_user.cpp  unit_tests.cpp  unit_tests.h
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml
ConsoleApp/: main.cpp
PCGConverter/: alchemist.cpp  alchemist.h  helpers.cpp  helpers.h  pcg_convert_gm.cpp  pcg_converter.cpp  pcg_converter.h  pcg_converter_combis.cpp  pcg_converter_effects.cpp  pcg_converter_programs.cpp  pcg_converter_user.cpp  unit_tests.cpp
QtApp/: QtPCGToVSTUI.cpp  QtPCGToVSTUI.h  QtPCGToVSTUI.qrc  QtPCGToVSTUI.ui  Worker.cpp  Worker.h  main.cpp
Resources/: Factory_Triton.PCG  Factory_TritonExtreme.PCG  PatchTemplate_Program.patch
Templates/: Extreme_Combi.patch  Extreme_Program.patch  Triton_Combi.patch  Triton_Program.patch
UnitTest/: VST_Extreme_Prog_A000.patch
VS2022/: PCGToVST.sln  PCGToVST.vcxproj  PCGToVST.vcxproj.filters  QtApp.vcxproj  QtApp.vcxproj.filters
